@startuml

title __CONTAINERS's Class Diagram__\n

  package  {
    package containers {
      class Container {
          - capacity : double
          - volume : double
          + Container()
          + Container()
          + getVolume()
          + getOriginalCapacity()
          + getCurrentCapacity()
          + addToTheContainer()
          + takeFromTheContainer()
          + toString()
      }
    }
  }
  

  package  {
    package containers {
      class ContainerHistory {
          - container : ArrayList<Double>
          + ContainerHistory()
          + reset()
          + add()
          + maxValue()
          + minValue()
          + greatestFluctuation()
          + average()
          + variance()
          {static} + sum()
          {static} + average()
          {static} + variance()
          + toString()
      }
    }
  }
  

  package  {
    package containers {
      class ProductContainer {
          - productName : String
          + ProductContainer()
          + ProductContainer()
          + ProductContainer()
          + setName()
          + getName()
          + toString()
      }
    }
  }
  

  package  {
    package containers {
      class ProductContainerRecorder {
          + ProductContainerRecorder()
          + addToTheContainer()
          + takeFromTheContainer()
          + history()
          + printAnalysis()
      }
    }
  }
  

  ProductContainer -up-|> Container
  ProductContainerRecorder -up-|> ProductContainer
  ProductContainerRecorder o-- ContainerHistory : containerHistory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
